--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ Werkzeug==1.0.1
 matplotlib==3.4.3
 Flask==1.1.0
 Pillow==9.0.0
+python-dateutil==2.8.2
+python-engineio==4.8.0
+python-firebase==1.2
+python-socketio==5.10.0
