--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,6 @@
-click==7.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
-matplotlib==3.4.3
-Flask==1.1.0
-Pillow==9.0.0
-python-dateutil==2.8.2
-python-engineio==4.8.0
-python-firebase==1.2
-python-socketio==5.10.0
-google-api-core==2.14.0
-google-api-python-client==2.107.0
-google-auth==2.23.4
-google-auth-httplib2==0.1.1
-google-cloud-core==2.3.3
-google-cloud-firestore==2.13.1
-google-cloud-storage==2.13.0
-google-crc32c==1.5.0
-google-resumable-media==2.6.0
-googleapis-common-protos==1.61.0
-grpcio==1.59.2
-grpcio-status==1.59.2
-h11==0.14.0
-httplib2==0.22.0
-idna==3.4
-Flask-SocketIO==5.3.6
-firebase-admin==6.2.0
-CacheControl==0.13.1
-cachetools==5.3.2
+Flask==3.0.0
+matplotlib==3.8.2
+Pillow==10.1.0
+requests==2.31.0
+schedule==1.2.1
+Werkzeug==3.0.1
