--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask==3.0.0
-matplotlib==3.8.2
-Pillow==10.1.0
-requests==2.31.0
-schedule==1.2.1
-Werkzeug==3.0.1
+click==7.1.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
+matplotlib==3.4.3
+Flask==1.1.0
+Pillow==9.0.0
