--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,17 @@ Werkzeug==1.0.1
 matplotlib==3.4.3
 Flask==1.1.0
 Pillow==9.0.0
+fonttools==4.45.0
+google-api-core==2.14.0
+google-api-python-client==2.108.0
+google-auth==2.23.4
+google-auth-httplib2==0.1.1
+google-cloud-core==2.3.3
+google-cloud-firestore==2.13.1
+google-cloud-storage==2.13.0
+google-crc32c==1.5.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.61.0
+grpcio==1.59.3
+grpcio-status==1.59.3
+firebase-admin==6.2.0
