--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ grpcio==1.59.3
 grpcio-status==1.59.3
 firebase-admin==6.2.0
 schedule==1.2.1
+blinker==1.7.0
+CacheControl==0.13.1
+cachetools==5.3.2
+certifi==2023.11.17
+cffi==1.16.0
